--- a/app/src/main/res/layout/fragment_map_screen.xml
+++ b/app/src/main/res/layout/fragment_map_screen.xml
@@ -36,4 +36,54 @@
         android:layout_height="match_parent"
         android:layout_below="@id/toolbarPasture" />
 
+    <LinearLayout
+        android:id="@+id/layoutAction"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_60dp"
+        android:layout_alignParentBottom="true"
+        android:background="#B3212A31"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/imageRemove"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/dimen_10dp"
+            android:layout_marginRight="@dimen/dimen_10dp"
+            android:background="@drawable/drawable_ripple_effect"
+            android:padding="@dimen/dimen_10dp"
+            android:src="@drawable/ic_remove" />
+
+        <ImageView
+            android:id="@+id/imageUndo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/dimen_10dp"
+            android:layout_marginRight="@dimen/dimen_10dp"
+            android:background="@drawable/drawable_ripple_effect"
+            android:padding="@dimen/dimen_10dp"
+            android:src="@drawable/ic_restore" />
+
+        <ImageView
+            android:id="@+id/imageDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/drawable_ripple_effect"
+            android:padding="@dimen/dimen_10dp"
+            android:src="@drawable/ic_done" />
+
+        <LinearLayout
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+    </LinearLayout>
 </RelativeLayout>
