--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="colorPrimaryDark">#191F24</color>
     <color name="colorAccent">#EDD4B2</color>
 
+    <color name="color_grey">#c5c5c5</color>
+    <color name="color_grey_ripple">#E1E1E1</color>
     <color name="color_primaryAlpha">#66212A31</color>
     <color name="color_white">#FFFFFF</color>
+    <color name="color_black">#000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
